--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     <!-- Hero Section Begin -->
     <section class="hero-section">
         <div class="hs-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hs-item set-bg" data-setbg="src/img/hero/hero-1.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
